@@ -5,6 +5,8 @@ import eu.inqudium.imperative.core.pipeline.AsyncLayerAction;
 import eu.inqudium.imperative.core.pipeline.InternalAsyncExecutor;
 
 import java.lang.reflect.Method;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
@@ -16,27 +18,10 @@ import java.util.concurrent.CompletionStage;
  * with different {@link JoinPointExecutor} instances — without rebuilding
  * the chain structure on every call.
  *
- * <p>Async counterpart to {@link ResolvedPipeline}, using the <strong>same
- * array-based composition pattern</strong>. The prior implementation stored
- * the chain as a nested {@code Function<Executor, Executor>} cascade: each
- * invocation of {@code chainFactory.apply(terminal)} unwound that cascade
- * recursively, producing {@code N} virtual {@code Function.apply} dispatches
- * on top of the {@code N} executor-lambda allocations. This class extracts
- * the {@link AsyncLayerAction} references <strong>once</strong> at
- * resolution time into a flat array; the per-call cost is a single reverse
- * loop over that array.</p>
- *
- * <h3>Hot-path cost</h3>
- * <p>Per invocation:</p>
- * <ol>
- *   <li>One {@link InternalAsyncExecutor} for the terminal (captures the
- *       caller-supplied {@link JoinPointExecutor}).</li>
- *   <li>{@code N} {@link InternalAsyncExecutor} lambdas for the layer wrappers
- *       — captured in a tight loop, each closing over only two references
- *       ({@code action} + {@code next}), short-lived, and excellent
- *       candidates for JIT escape analysis.</li>
- * </ol>
- * <p>No {@code Function.apply()} dispatch, no recursive cascade unwinding.</p>
+ * <p>Async counterpart to {@link ResolvedPipeline}, using the same
+ * array-based composition pattern. The per-call cost is a single reverse
+ * loop over the pre-built {@link AsyncLayerAction} array — no
+ * {@code Function.apply()} dispatch, no cascade unwinding.</p>
  *
  * <h3>Two-phase execution semantics</h3>
  * <p>Each async layer has two phases:</p>
@@ -52,15 +37,14 @@ import java.util.concurrent.CompletionStage;
  * <p>{@link #execute(JoinPointExecutor)} <strong>never throws</strong>. All
  * failures — whether from a layer's synchronous start phase or from the
  * asynchronous completion — are delivered through the returned
- * {@link CompletionStage}. This gives callers a uniform error channel for
- * {@code .exceptionally()}, {@code .handle()}, and {@code .whenComplete()}.</p>
+ * {@link CompletionStage}.</p>
  *
  * <h3>Thread safety</h3>
  * <p>Instances are safe for concurrent use. The action array is immutable;
  * chain composition is purely stack-local; the call-ID counter lives in
  * {@link PipelineDiagnostics} and is backed by an {@link java.util.concurrent.atomic.AtomicLong}.
- * No {@code ThreadLocal} or shared mutable state is used — safe for virtual
- * threads and reactive pipelines.</p>
+ * No {@code ThreadLocal} or shared mutable state — safe for virtual threads
+ * and reactive pipelines.</p>
  *
  * @since 0.7.0
  */
@@ -73,18 +57,14 @@ public final class AsyncResolvedPipeline {
 
     /**
      * Sentinel instance for methods with no applicable async layers.
-     *
-     * <p>Shares the global {@link PipelineDiagnostics#EMPTY} sentinel so that
-     * all empty async pipelines across the JVM do not each reserve a chain ID
-     * or share a single counter.</p>
      */
     private static final AsyncResolvedPipeline EMPTY = new AsyncResolvedPipeline(
             EMPTY_ACTIONS, PipelineDiagnostics.EMPTY);
 
     /**
      * Pre-built, immutable array of async layer actions in execution order
-     * (outermost first). Extracted from providers once during {@link #fromProviders}
-     * — no per-call provider access, no per-call filtering, no per-call sort.
+     * (outermost first). Extracted from providers once during
+     * {@link #fromProviders} — no per-call provider access.
      */
     private final AsyncLayerAction<Void, Object>[] actions;
 
@@ -102,10 +82,6 @@ public final class AsyncResolvedPipeline {
      * Resolves and pre-composes an async pipeline from the given providers,
      * filtered by the target method.
      *
-     * <p>Filter, sort, and action extraction happen exactly once. The returned
-     * instance can then be invoked repeatedly with different
-     * {@link JoinPointExecutor}s at negligible additional cost.</p>
-     *
      * @param providers all registered async providers (will be filtered and sorted)
      * @param method    the target method for {@code canHandle} filtering
      * @return a pre-composed, reusable async pipeline
@@ -121,7 +97,6 @@ public final class AsyncResolvedPipeline {
             throw new IllegalArgumentException("Method must not be null");
         }
 
-        // Filter and sort in a single stream pass
         List<? extends AsyncAspectLayerProvider<Object>> applicable = providers.stream()
                 .filter(p -> p.canHandle(method))
                 .sorted(Comparator.comparingInt(AsyncAspectLayerProvider::order))
@@ -131,11 +106,36 @@ public final class AsyncResolvedPipeline {
     }
 
     /**
-     * Builds an {@code AsyncResolvedPipeline} from an already filtered and
-     * sorted provider list.
+     * Resolves and pre-composes an async pipeline from the given providers
+     * without applying any {@code canHandle(Method)} filter.
      *
-     * <p>Extracts layer actions and names in a single pass. Actions go into
-     * a permanent array on this instance; names go to {@link PipelineDiagnostics}.</p>
+     * <p>Used by
+     * {@link AbstractAsyncPipelineAspect#executeThroughAsync(JoinPointExecutor)}
+     * when no target method is available. The resulting pipeline includes
+     * all providers sorted by {@link AsyncAspectLayerProvider#order()}.</p>
+     *
+     * @param providers all registered async providers (will be sorted, not filtered)
+     * @return a pre-composed, reusable async pipeline containing every provider
+     * @throws IllegalArgumentException if providers is null
+     */
+    public static AsyncResolvedPipeline resolveAll(
+            List<? extends AsyncAspectLayerProvider<Object>> providers) {
+        if (providers == null) {
+            throw new IllegalArgumentException("Providers list must not be null");
+        }
+
+        List<? extends AsyncAspectLayerProvider<Object>> sorted = providers.stream()
+                .sorted(Comparator.comparingInt(AsyncAspectLayerProvider::order))
+                .toList();
+
+        return fromProviders(sorted);
+    }
+
+    /**
+     * Builds an {@code AsyncResolvedPipeline} from an already filtered and
+     * sorted provider list. Names go into an {@link ArrayList} sized exactly
+     * and wrapped unmodifiable — this avoids the array copy performed by
+     * {@code List.of(E...)} when called with an array argument.
      */
     private static AsyncResolvedPipeline fromProviders(
             List<? extends AsyncAspectLayerProvider<Object>> providers) {
@@ -145,15 +145,16 @@ public final class AsyncResolvedPipeline {
 
         int size = providers.size();
         AsyncLayerAction<Void, Object>[] acts = newActionArray(size);
-        String[] names = new String[size];
+        List<String> names = new ArrayList<>(size);
 
         for (int i = 0; i < size; i++) {
             AsyncAspectLayerProvider<Object> p = providers.get(i);
             acts[i] = p.asyncLayerAction();
-            names[i] = p.layerName();
+            names.add(p.layerName());
         }
 
-        return new AsyncResolvedPipeline(acts, PipelineDiagnostics.create(List.of(names)));
+        return new AsyncResolvedPipeline(acts,
+                PipelineDiagnostics.create(Collections.unmodifiableList(names)));
     }
 
     @SuppressWarnings("unchecked")
@@ -165,11 +166,8 @@ public final class AsyncResolvedPipeline {
 
     /**
      * Executes the pre-composed async pipeline with the given join point
-     * executor.
-     *
-     * <p>Never throws — all failures are delivered through the returned
-     * {@link CompletionStage}. See class-level Javadoc for the full error
-     * contract.</p>
+     * executor. Never throws — all failures are delivered through the
+     * returned {@link CompletionStage}.
      *
      * @param coreExecutor the join point execution (typically
      *                     {@code () -> (CompletionStage<Object>) pjp.proceed()})
@@ -182,8 +180,6 @@ public final class AsyncResolvedPipeline {
         long cid = diagnostics.chainId();
 
         // Terminal: invokes the typed executor and bridges into the async chain.
-        // CompletionStage return type is enforced by the method signature —
-        // no runtime instanceof check needed.
         InternalAsyncExecutor<Void, Object> current = (c, ca, a) -> {
             try {
                 return coreExecutor.proceed();
@@ -197,7 +193,6 @@ public final class AsyncResolvedPipeline {
 
         // Compose chain inside-out from the pre-built action array.
         // Each lambda captures only 2 references: the action and next.
-        // This is a tight loop — no Function.apply dispatch, no cascade unwinding.
         for (int i = actions.length - 1; i >= 0; i--) {
             AsyncLayerAction<Void, Object> action = actions[i];
             InternalAsyncExecutor<Void, Object> next = current;
@@ -226,10 +221,7 @@ public final class AsyncResolvedPipeline {
 
     /**
      * Returns the most recently generated call ID across all threads.
-     *
-     * <p><strong>Informational only.</strong> In concurrent environments this
-     * value does not correspond to any specific thread's call — see
-     * {@link PipelineDiagnostics#currentCallId()} for details.</p>
+     * <strong>Informational only.</strong>
      */
     public long currentCallId() {
         return diagnostics.currentCallId();
